refactor: Use sequenced collection methods